Fixed css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,14 @@
     color: blue;
 }
 
-
-
-
 *{
   list-style: none;
   text-decoration: none;
+}
+
+h1,body,ul{
+  margin: 0;
+  padding: 0;
 }
 
 #logo {
